--- a/css/base.css
+++ b/css/base.css
@@ -71,12 +71,12 @@
 	h1 { font-size: 40px; line-height: 50px; margin-bottom: 14px;}
 	h2 { font-size: 30px; line-height: 40px; margin-bottom: 10px; }
 	h3 { font-size: 24px; line-height: 34px; margin-bottom: 8px; }
-	h4 { font-size: 16px; line-height: 30px; margin-bottom: 4px; }
+	h4 { font-size: 16px; line-height: 30px; /*margin-bottom: 4px;*/ }
 	h5 { font-size: 14px; line-height: 24px; margin-bottom: 4px; }
 	h6 { font-size: 12px; line-height: 21px; }
 	.subheader { color: #0c0c0c; }
 
-	p { margin: 0 0 20px 0; }
+	p { margin: 0 0 0 0; }
 	p img { margin: 0; }
 	p.lead { font-size: 21px; line-height: 27px; color: #0c0c0c;  }
 
@@ -103,7 +103,7 @@
 
 /* #Lists
 ================================================== */
-ul, ol { margin-bottom: 20px; }
+ul, ol { /*margin-bottom: 20px;*/ }
 ul { list-style: disc outside; }
 ol { list-style: decimal; }
 ol, ul.square, ul.circle, ul.disc { margin-left: 30px; }
